adapt jdk9+